# gestalt

./: .gitignore  3d_mesh_latent_segmentation.ipynb  README.md  fix_notebook.py  pyproject.toml
docs/: brainstorm.md  recognition_findings.md
examples/: text_agent.py
experiments/: make_data.py  make_multiview3d.py  run_analysis_by_synthesis.py  run_backbone_probe.py  run_classify_compare.py  run_equivariant_ae.py  run_factorization.py  run_generative_real.py  run_generative_recognition.py  run_invariant_signature.py  run_latent_classifier.py  run_mnist_absyn.py  run_multitask_compare.py  run_multiview_compare.py  run_r3dcnn.py  run_r3dcnn_clean.py  run_r3dcnn_inspect.py  run_r3dcnn_multiclass.py  run_r3dcnn_repr.py  run_render_compare_seg.py  run_signature_distill.py  run_transfer_testbed.py  run_verify_multiview.py  run_viewpoint_mnist.py  run_visualize_geometry.py
notebooks/: 3d_rcnn_colab.ipynb  3d_rcnn_pytorch3d_phase1.ipynb  3d_rcnn_render_and_compare.ipynb  _make_3drcnn_colab.py  _make_3drcnn_notebook.py  _make_3drcnn_phase1.py  _make_roadside_skeleton.py  hermes_voice_agent_colab.ipynb  roadside_3drcnn_skeleton.ipynb
src/gestalt/: __init__.py  ae3d.py  backbones.py  descriptors.py  energy.py  generative.py  inference.py  invariants.py  mcp_server.py  models.py  ollama_agent.py  r3dcnn.py  render3d.py  synth.py  world.py
tests/: test_ollama_agent.py  test_world.py
