[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gestalt"
version = "0.1.0"
description = "A sandbox-world MCP server for voice-driven agents: speak -> Qwen3-ASR -> Llama (Ollama) -> gestalt tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # FastMCP < ~1.14 mishandles `X | None` tool annotations; require a modern mcp.
    "mcp>=1.20",
]

[project.optional-dependencies]
# The agent loop: a local Llama model via Ollama, driving the gestalt MCP tools.
agent = ["ollama>=0.4"]
# Local speech-to-text (GPU recommended). Used on Colab.
asr = ["qwen-asr", "soundfile"]
dev = ["pytest"]

[project.scripts]
# Launched by the notebook over stdio; serves the sandbox world as MCP tools.
gestalt-mcp = "gestalt.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
